# nodeLive

./: .claudeignore  .gitignore  CLAUDE.md  DEPLOY.md  MILESTONES.md  README.md  SESSION_HANDOFF.md  dev  docker-compose.yml  plan.md  render.yaml
backend/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt  start.sh
backend/alembic/versions/: 38cd957100b4_lecture_notes.py  3a0dd075c00f_live_meeting_tables.py  64f290eb783a_assignments_submissions.py  a1f7c2b4e9d3_quiz_launched_at.py  a1f7c3e9b2d4_organizations_memberships.py  d94ea5abad38_enrollments.py
backend/app/: main.py
backend/app/api/: admin.py  analytics.py  assignments.py  auth.py  live.py  (+7 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_attendance.py  test_admin_members.py  test_admin_overview.py  test_admin_sessions.py  test_ai_chat.py  test_analytics.py  test_assignment_upload.py  test_assignments.py  test_attendance.py  test_auth.py  test_bootstrap_admin.py  test_cors_config.py  test_dashboard.py  test_dashboard_stats.py  test_email_notifications.py  test_intervals.py  test_leaderboard.py  test_live_features.py  test_live_join.py  test_live_state.py  test_notes.py  test_platform_milestones.py  test_profile_update.py  test_progress.py  test_realtime.py  test_recording_api.py  test_recording_heartbeat.py  test_recording_ingest.py  test_recording_storage_integration.py  test_scoring.py  test_seed_idempotency.py  test_session_lifecycle.py  test_session_visibility.py  test_sessions.py  test_smoke.py  test_sync_attendance.py  test_webhooks.py  test_zoom_jwt.py  test_zoom_meetings.py
(+115 files in other folders)
