[project]
name = "linkhq-backend"
version = "0.1.0"
description = "linkHQ backend — FastAPI live-meeting LMS"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
# Never lint a stray virtualenv that lands in the tree (CI runners can leave a
# `.venvNNN/` behind that git-clean misses); force-exclude makes it stick even
# when files are passed explicitly.
extend-exclude = [".venv", ".venv*", "venv", "venv*", "alembic/versions"]
force-exclude = true

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions, simplify
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # passlib accesses argon2.__version__ (its own deprecation, not ours)
    "ignore:.*argon2.__version__.*:DeprecationWarning",
    # python-jose uses datetime.utcnow() internally
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning",
]
